# ai-hwaccel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  bench-history.csv  benchmarks.md  codecov.yml  cyrius.cyml  cyrius.toml  deny.toml  rust_out
.claude/projects/-home-macro-Repos-ai-hwaccel/memory/: MEMORY.md  feedback_cyrius_alloc.md  feedback_cyrius_enums.md  feedback_cyrius_fn_order.md  project_cyrius_blockers.md
.github/workflows/: ci.yml  release.yml  wheels.yml
benches/: cost.rs  detect.rs  parsing.bcyr  parsing.rs  plan.rs  quantization.rs  registry.bcyr  registry.rs  training.rs
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/scripts/: build_remote.sh  build_wheel.sh  stage_binary.sh  stage_win_cross.sh
bindings/python/src/ai_hwaccel/: __init__.py  _pandas.py  _runner.py  models.py
bindings/python/tests/: test_bundled.py  test_cli.py  test_models.py
bindings/python/tests/fixtures/: cost.json  plan.json  registry.json  summary.json  training.json
data/: models.json
docs/: benchmarks-rust-v-cyrius.md  migration.md  performance.md  schema.json  troubleshooting.md
docs/architecture/: overview.md
docs/decisions/: 001-sysfs-over-vendor-sdks.md  002-calendar-versioning.md  003-parallel-detection.md  004-feature-flags-per-backend.md
docs/development/: roadmap.md  threat-model.md
docs/development/issues/: 2026-06-11-registry-new-collision.md  2026-06-12-gpu-probe-thread-blocks-agnos-build.md  2026-06-23-err-timeout-enum-collision-namespace.md
docs/guides/: framework-integration.md  production.md  testing.md
examples/: detect.rs  json_output.rs  plan.rs  training.rs
fuzz/: Cargo.toml  apple_parser.fcyr  cuda_parser.fcyr  gaudi_parser.fcyr  model_format.fcyr  neuron_parser.fcyr  vulkan_parser.fcyr
fuzz/fuzz_targets/: fuzz_apple.rs  fuzz_bandwidth.rs  fuzz_cuda.rs  fuzz_gaudi.rs  fuzz_intel_oneapi.rs  fuzz_json.rs  fuzz_neuron.rs  fuzz_new_backends.rs  fuzz_nvlink.rs  fuzz_small_parsers.rs  fuzz_vulkan.rs
include/: ai_hwaccel.h
lib/: str.cyr
memory/: MEMORY.md  feedback_cc5_win_exit_propagation.md  feedback_undefined_symbol.md  project_cyrius_port.md  project_fixup_blocker.md  reference_cyrius_lang.md  reference_windows_host.md  user_robert.md
py/: Cargo.toml  ai_hwaccel.pyi  pyproject.toml
py/examples/: basic_detect.py  sharding_plan.py  training_memory.py
py/src/: lib.rs
scripts/: bench-history.sh  version-bump.sh
src/: async_detect.cyr  async_detect.rs  cache.cyr  cache.rs  cost.cyr  cost.rs  detect.rs  error.cyr  error.rs  ffi.rs  fuzz_helpers.rs  json_out.cyr  lazy.cyr  lazy.rs  lib.rs  log.cyr  main.cyr  main.rs  model.cyr  model_compat.rs  model_format.cyr  model_format.rs  plan.cyr  plan.rs  profile.cyr  profile.rs  quantization.cyr  quantization.rs  registry.cyr  registry.rs  requirement.cyr  requirement.rs  sharding.rs  system_io.cyr  system_io.rs  tests.rs  training.cyr  training.rs  types.cyr  types.rs  (+2 more)
src/detect/: amd_xdna.cyr  amd_xdna.rs  apple.cyr  apple.rs  bandwidth.cyr  bandwidth.rs  cerebras.rs  cloud_asic.cyr  command.cyr  command.rs  cuda.cyr  cuda.rs  disk.cyr  disk.rs  edge.cyr  environment.cyr  environment.rs  gaudi.cyr  gaudi.rs  graphcore.rs  groq.rs  intel.cyr  intel_npu.rs  intel_oneapi.rs  interconnect.cyr  interconnect.rs  mediatek_apu.rs  mod.rs  neuron.cyr  neuron.rs  numa.cyr  numa.rs  pcie.cyr  pcie.rs  platform.cyr  platform.rs  qualcomm.rs  rocm.cyr  rocm.rs  samsung_npu.rs  (+6 more)
src/hardware/: gaudi.rs  mod.rs  neuron.rs  tpu.rs
src/tests/: async_detect.rs  builder.rs  classification.rs  command.rs  cost.rs  coverage.rs  display.rs  environment.rs  ffi.rs  lazy.rs  mod.rs  new_backends.rs  parsing.rs  proptest.rs  quantization.rs  registry.rs  requirement.rs  serde.rs  sharding.rs  system_io.rs  timed_detection.rs  training.rs  units.rs
supply-chain/: audits.toml  config.toml
tests/: hardware_integration.rs  integration.rs  mock_detection.rs  test_phase1.cyr  test_phase10.cyr  test_phase11.cyr  test_phase2.cyr  test_phase3.cyr  test_phase4.cyr  test_phase5.cyr  test_phase9.cyr
tests/tcyr/: backend_test.tcyr  cost_model_test.tcyr  foundation_test.tcyr  gpu_parser_test.tcyr  io_test.tcyr  json_output_test.tcyr  json_roundtrip_test.tcyr  model_format_test.tcyr  planning_test.tcyr  profile_test.tcyr  registry_test.tcyr  topology_test.tcyr  windows_test.tcyr
