[package]
name = "ai-hwaccel"
version = "0.21.3"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only"
description = "Universal AI hardware accelerator detection, capability querying, and workload planning for Rust"
homepage = "https://github.com/MacCracken/ai-hwaccel"
repository = "https://github.com/MacCracken/ai-hwaccel"
readme = "README.md"
documentation = "https://docs.rs/ai-hwaccel"
keywords = ["gpu", "tpu", "npu", "cuda", "accelerator"]
categories = ["hardware-support", "science"]
exclude = ["rust_out", ".claude/"]

[features]
default = ["all-backends", "cli"]
all-backends = [
    "cuda", "rocm", "apple", "vulkan", "intel-npu", "amd-xdna",
    "tpu", "gaudi", "aws-neuron", "intel-oneapi", "qualcomm",
    "cerebras", "graphcore", "groq", "samsung-npu", "mediatek-apu",
]
cuda = []
rocm = []
apple = []
vulkan = []
intel-npu = []
amd-xdna = []
tpu = []
gaudi = []
aws-neuron = []
intel-oneapi = []
qualcomm = []
cerebras = []
graphcore = []
groq = []
samsung-npu = []
mediatek-apu = []
cli = ["dep:tracing-subscriber"]
async-detect = ["dep:tokio"]
fuzz = []

[[bin]]
name = "ai-hwaccel"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
tokio = { version = "1", features = ["process", "rt", "macros", "time"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["process", "rt", "macros"] }

[[bench]]
name = "detect"
harness = false

[[bench]]
name = "plan"
harness = false

[[bench]]
name = "training"
harness = false

[[bench]]
name = "cost"
harness = false

[[bench]]
name = "quantization"
harness = false

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "registry"
harness = false
