[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ai-hwaccel"
version = "0.21.3"
description = "Universal AI hardware accelerator detection, capability querying, and workload planning"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.9"
readme = "README.md"
keywords = ["gpu", "tpu", "npu", "cuda", "accelerator", "hardware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ai_hwaccel"
