[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hwaccel"
version = "2.3.3"
description = "Universal AI hardware accelerator detection — Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Robert MacCracken" }]
keywords = ["gpu", "cuda", "rocm", "tpu", "accelerator", "hardware", "detection"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/MacCracken/ai-hwaccel"
Repository = "https://github.com/MacCracken/ai-hwaccel"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Per-platform binary is bundled here from 2.3.3 (wheels). Empty in the
# pure-source/sdist install — the runner falls back to PATH / AI_HWACCEL_BIN.
ai_hwaccel = ["_bin/*"]
