[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hwaccel"
version = "2.3.4"
description = "Universal AI hardware accelerator detection — Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Robert MacCracken" }]
keywords = ["gpu", "cuda", "rocm", "tpu", "accelerator", "hardware", "detection"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/MacCracken/ai-hwaccel"
Repository = "https://github.com/MacCracken/ai-hwaccel"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Per-platform binary + its data files, staged by scripts/stage_binary.sh
# and bundled into the platform wheel (2.3.4). Empty in the pure-source
# install — the runner falls back to PATH / AI_HWACCEL_BIN.
ai_hwaccel = ["_bin/ai-hwaccel", "_bin/ai-hwaccel.exe", "_bin/VERSION", "_bin/data/*"]
